typo (geen \verb in \footnote???)

--- a/6dejaar/kinematica/knmtc_bgrppn_intro.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_intro.tex
@@ -9,7 +9,7 @@
     \xmsource\xmuitleg
 
 \textbf{Kinematica}
-\footnote{Het woord \verb|kinematica| is net zoals \verb|cinema| en \vzerb|kinesist| afgeleid van het Griekse $\kappa \iota \nu \eta \mu \alpha$ dat \verb|beweging| betekent.} 
+\footnote{Het woord 'kinematica' is net zoals 'cinema' en 'kinesist' afgeleid van het Griekse $\kappa \iota \nu \eta \mu \alpha$ dat 'beweging' betekent.} 
 is het onderdeel van de fysica dat de \textbf{bewegingen van voorwerpen beschrijft}, 
 % zonder zich af te vragen wat de bewegingen veroorzaakt.
 zoals vallende appels, rollende knikkers of rijdende auto's, maar ook de beweging van de maan rond de aarde of de aarde rond de zon. 
