--- a/global.sty
+++ b/global.sty
@@ -6,3 +6,6 @@
 \renewcommand{\xmorganisatienaam}{{\textsc{}}}
 \renewcommand{\xmafdelingsnaam}{{\textsc{Wiskunde Op Maat}}}
 
+
+\logo{xmPictures/nomlogo.png}
+
