--- a/SPC/kinematica_basis.tex
+++ b/SPC/kinematica_basis.tex
@@ -37,7 +37,7 @@
 \activitychapter{../kinematica/basis_positie.tex}
 \activitychapter{../kinematica/basis_snelheid.tex}
 \activitychapter{../kinematica/basis_versnelling.tex}
-\activitychapter{../kinematica/basis_oef.tex}
+\activitychapter{../kinematica/exercises/basis_oef.tex}
 
 
 
