--- a/semester1.tex
+++ b/semester1.tex
@@ -1,7 +1,11 @@
 %\documentclass[12pt,numbers,noauthor,nooutcomes,wordchoicegiven]{xourse}
-\documentclass{xourse}
+%\documentclass{xourse}
 
-\addPrintStyle{.}
+%%
+%% OBSOLETE: zie folder SPC
+%%
+
+%\addPrintStyle{.}
 
 \pdfOnly{
     \renewcommand{\xmcursusnaam}{{\textsc{Natuurkunde}}}
