only kinematica_basis; fix logo

--- a/SPC/global.sty
+++ b/SPC/global.sty
@@ -6,4 +6,4 @@
 \renewcommand{\xmorganisatienaam}{{\textsc{}}}
 \renewcommand{\xmafdelingsnaam}{{\textsc{Wiskunde Op Maat}}}
 
-%\logo{xmPictures/logospc.png}
+\logo{xmPictures/logospc.png}
