groottes pictures;  één vb met 3 questions ipv 3 vbn; aanpassingen teks,t ...

--- a/vectoren/vectoren_bewerkingen.tex
+++ b/vectoren/vectoren_bewerkingen.tex
@@ -60,7 +60,7 @@ Twee vectoren van dezelfde grootheid met hetzelfde aangrijpingspunt kunnen opget
 Deze vector wordt \textbf{de resultante} genoemd. 
 Grafisch (kwalitatief) bekomt men de resultante via de kopstaartmethode of parallellogrammethode.  %kopstaartmethode (voor de eenvoud enkel parallellogram gebruiken? --> toch niet (vincent))
 
-\begin{image}[0.4\textwidth]
+\begin{image}[0.3\textwidth]
     \begin{tikzpicture}
      % TIKZPICTURE DIE DE SOM VAN TWEE VECTOREN BEREKENT 
     % \draw (-4,-4) grid (4,4);
@@ -101,16 +101,20 @@ In evenwijdige of loodrechte gevallen zijn er efficiënte manieren om de resulta
 
 met \(\alpha\) de hoek tussen \(\vec{a}\) en \(\vec{b}\). 
 
+%% TODO: verband uitleggen met de 'echte' cosinusregel (waar (mogelijk?) een andere hoek wordt gebruikt, zie voorbeeld 3 met hoek phi.)
+
 \begin{quickquestion*}{}{}
   Hoe vereenvoudigt de formule als \(\vec{a}\) en \(\vec{b}\) loodrecht staan? Wat als ze dezelfde richting hebben? 
 \end{quickquestion*}
 
 \begin{example}
 
-In onderstaande figuur is \(\|\vec{a}\| = \SI{3}{\newton}\) en \(\|\vec{b}\| = \SI{5}{\newton}\). 
-Bijgevolg is  \(\| \vec{c} \| = \|\vec{a}\| + \|\vec{b}\| = \SI{8}{\newton}\). 
+%% Som colineair
+\begin{question}
+Als in onderstaande figuur \(\|\vec{a}\| = \SI{3}{\newton}\) en \(\|\vec{b}\| = \SI{5}{\newton}\),\\
+dan is hier  \(\| \vec{c} \| = \|\vec{a} + \vec{b} \| = \|\vec{a}\| + \|\vec{b}\| = \SI{5}{\newton} - \SI{3}{\newton}= \SI{8}{\newton}\). 
 
-\begin{image}[0.3\textwidth]
+\begin{image}[!]
     \begin{tikzpicture}
         \coordinate (O) at (0,0);
         \coordinate (A) at (1,0);
@@ -129,16 +133,16 @@ Bijgevolg is  \(\| \vec{c} \| = \|\vec{a}\| + \|\vec{b}\| = \SI{8}{\newton}\).
         \draw[->, blue] ($ (O) - (Shift) $)--($ (B) - (Shift) $)  node[midway, below]{$\vec{b}$};
     \end{tikzpicture}
 \end{image}
-\end{example}
+\end{question}
 
-\begin{example}
-
+%% Verschil colineair
+\begin{question}
 % hier staat onnauwkeurigheid; de norm moet buiten de bewerking staan; de norm van een verschil is commutatief
 
-In onderstaande figuur is \(\|\vec{a}\| = \SI{3}{\newton}\) en \(\|\vec{b}\| = \SI{5}{\newton}\). 
-Bijgevolg is  \(\| \vec{c} \| = \|\vec{a} + \vec{b}\| =  \SI{5}{\newton} - \SI{3}{\newton}  = \SI{2}{\newton}\). 
+Als in onderstaande figuur \(\|\vec{a}\| = \SI{3}{\newton}\) en \(\|\vec{b}\| = \SI{5}{\newton}\), \\
+dan is hier \(\| \vec{c} \| = \|\vec{a} + \vec{b} \| = \|\vec{a}\|  - \|\vec{b}\| =  \SI{5}{\newton} - \SI{3}{\newton}  = \SI{2}{\newton}\). 
 
-\begin{image}[0.3\textwidth]
+\begin{image}[!]
     \begin{tikzpicture}
         \coordinate (O) at (0,0);
         \coordinate (A) at (-1,0);
@@ -157,13 +161,15 @@ Bijgevolg is  \(\| \vec{c} \| = \|\vec{a} + \vec{b}\| =  \SI{5}{\newton} - \SI{3
         \draw[->, blue] ($ (O) - (Shift) $)--($ (B) - (Shift) $) node[midway, below]{$\vec{b}$};
     \end{tikzpicture}
 \end{image}
-\end{example}
 
+\end{question}
 
+%% Algemeen geval: cosinusregel
+\begin{question}
 
-\begin{example}
+Als in onderstaande figuur \(\|\vec{a}\| = \SI{3}{\newton}, \; \|\vec{b}\| = \SI{5}{\newton} \text{ en } \alpha = 50^\circ\),\\
+dan moet  \(\| \vec{c} \| = \|\vec{a} + \vec{b}\| \) worden berekend met de cosinusregel. 
 
-In onderstaande figuur is \(\|\vec{a}\| = \SI{3}{\newton}, \; \|\vec{b}\| = \SI{5}{\newton} \text{ en } \alpha = 50^\circ\). 
 
     \begin{image}[0.5\textwidth]
         \begin{tikzpicture}
@@ -186,43 +192,46 @@ In onderstaande figuur is \(\|\vec{a}\| = \SI{3}{\newton}, \; \|\vec{b}\| = \SI{
 
            \draw[dotted] (O)--(Z);
        
-           \draw[->, -latex, blue] (O) -- (A) node[midway, above left]{\(\vec{a}\)};
-           \draw[->, -latex, red] (O) -- (B) node[midway, below]{\(\vec{b}\)};
-           \draw[->, -latex, xmgreen] (O) -- (C) node[pos=1, above right, xmgreen]{\(\vec{c} = \vec{a}+\vec{b}\)};
+           \draw[->, -latex, blue   ] (O) -- (A) node[midway, above left]{\( \vec{a} \)};
+           \draw[->, -latex, red    ] (O) -- (B) node[midway, below     ]{\( \vec{b} \)};
+           \draw[->, -latex, xmgreen] (O) -- (C) node[pos=1, above right]{\( \vec{c} = \vec{a}+\vec{b} \)};
            
-           \draw[->, dashed, -latex, red, thick] (A) -- (C) node[midway, above left]{\( \vec{b} \)};
+           \draw[->, dashed, -latex, red , thick] (A) -- (C) node[midway, above left ]{\( \vec{b} \)};
            \draw[->, dashed, -latex, blue, thick] (B) -- (C) node[midway, below right]{\( \vec{a} \)};
 
-           \draw pic[ pic text = \(\alpha\), draw, angle radius=0.4cm]{angle= B--O--A};
-           \draw pic[ pic text = \(\gamma\), draw, angle radius=0.7cm, angle eccentricity=1.2]{angle= B--O--C};
-           \draw pic[ pic text = \(\varphi\), draw, angle radius=0.5cm]{angle= C--B--O};
-           \draw pic[ pic text = \(\varphi\), draw, angle radius=0.5cm]{angle= A--O--Z};
+           \draw pic[ pic text = \(\alpha \), draw, angle radius=0.7cm]                        {angle= B--O--A};
+           \draw pic[ pic text = \(\gamma \), draw, angle radius=1.2cm, angle eccentricity=1.2]{angle= B--O--C};
+           %\draw pic[ pic text = \(\varphi\), draw, angle radius=0.5cm]                        {angle= C--B--O};
+           %\draw pic[ pic text = \(\varphi\), draw, angle radius=0.5cm]                        {angle= A--O--Z};
        \end{tikzpicture}
     \end{image}
     
 De grootte van de resultante \(\vec{c}\) wordt bepaald met de cosinusregel: 
 
 % Cosinusregel
-\[
-\|\vec{c}\|^2 = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos\varphi
-\]
-\[
-= \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos(180^\circ - \alpha)
-\]
-\[
-= \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|(-\cos\alpha)
-\]
-\[
-= \|\vec{a}\|^2 + \|\vec{b}\|^2 + 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos\alpha
-\]
+% \[
+% \|\vec{c}\|^2 = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos\varphi
+% \]
+% \[
+% = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos(180^\circ - \alpha)
+% \]
+% \[
+% = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|(-\cos\alpha)
+% \]
+% \[
+% = \|\vec{a}\|^2 + \|\vec{b}\|^2 + 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos\alpha
+% \]
 \[
 = \sqrt{3^2 + 5^2 + 2 \cdot 3 \cdot 5 \cdot \cos 50^\circ} \approx \SI{7.3}{N}. 
 \]
 
+\end{question}
+
 \end{example}
 
 \begin{remark}
-In het algemeen geldt dus \textbf{niet} dat \(\|\vec{c}\| = \| \vec{a+b}\| = \|\vec{a}\| + \|\vec{b}\|\). In welk(e) geval(len) geldt de eigenschap wel? 
+In het algemeen geldt dus \textbf{niet} dat  \( \xcancel{ \|\vec{a+b}\| = \|\vec{a}\| + \|\vec{b}\| } \). 
+In welk(e) geval(len) geldt de geljkheid wel? 
 \end{remark}
 
 
@@ -250,7 +259,7 @@ Indien er dus meer dan twee vectoren worden samengesteld, tel je eerst twee erva
 
 \subsection*{Verschil van twee vectoren}
 
-Net zoals bij getallen is het ook mogelijk voor vectoren om van een verschil een som te maken: 
+Net zoals bij getallen $5 - 3 = 5 + (-3)$, kan je ook bij vectoren een verschil schrijven als een som met de tegengestelde: 
 
 \[
 \vec{c} = \vec{a}-\vec{b} = \vec{a} + (-\vec{b})
@@ -264,7 +273,7 @@ Op dezelfde manier is het verschil van vectoren \(\vec{a}\) en \(\vec{b}\) gelij
 
 
 % TIKZPICTURE DIE HET VERSCHIL VAN TWEE VECTOREN WEERGEEFT 
-\begin{image}[0.5\textwidth]
+\begin{image}[!]
     \begin{tikzpicture}
         \pgfmathsetmacro{\r}{3}
         \pgfmathsetmacro{\ra}{0.5 * \r}
@@ -316,7 +325,7 @@ De grootte van de componenten volgt rechtstreeks uit de goniometrische getallen:
 \]
 
 % TIKZPICTURE DIE DE ONTBINDING IN COMPONENTEN WEERGEEFT 
-\begin{image}[0.3\textwidth]
+\begin{image}[!]
 \begin{tikzpicture}
     % \draw (-4,-4) grid (4,4);
 
@@ -367,7 +376,7 @@ $$
 \end{quickquestion*}
 
 % TIKZPICTURE DIE SCALAIR PRODUCT van a op b ILLUSTREERT  
-\begin{image}
+\begin{image}[!]
 \begin{tikzpicture}
     % \draw (-4,-4) grid (4,4);
 
@@ -404,7 +413,7 @@ Het vectorieel product wordt genoteerd als
 \vec{c} = \vec{a} \times \vec{b} = \| \vec{a}_y \| \cdot \|\vec{b}\| = \|\vec{a}\| \cdot \sin(\alpha) \cdot \|\vec{b}\| = \| \vec{a}\| \cdot \| \vec{b}\| \cdot \sin(\alpha)
 \]
 
-\begin{image}[0.4\textwidth]
+\begin{image}[!]
     \begin{tikzpicture}
         
         \pgfmathsetmacro{\ax}{1}
@@ -432,7 +441,7 @@ Het vectorieel product wordt genoteerd als
 \end{image}
 \captionof{figure}{Het vectorieel product}
 
-\begin{image}[0.4\textwidth]
+\begin{image}[0.2\textwidth]
 \includegraphics{rechterhandregel}
 \end{image}
 \captionof{figure}{De rechterhandregel}
