--- a/kinematica/basis_intro.tex
+++ b/kinematica/basis_intro.tex
@@ -10,16 +10,16 @@
 \textbf{Kinematica}
 \footnote{Het woord 'kinematica' is net zoals 'cinema' en 'kinesist' afgeleid van het Griekse $\kappa \iota \nu \eta \mu \alpha$ dat 'beweging' betekent.} 
 is het onderdeel van de fysica dat de \textbf{bewegingen van voorwerpen beschrijft}, 
-% zonder zich af te vragen wat de bewegingen veroorzaakt.
 zoals vallende appels, rollende knikkers of rijdende auto's, maar ook de beweging van de maan rond de aarde of de aarde rond de zon. 
+In de kinematica wordt de beweging enkel \textit{beschreven}, zonder de achterliggende oorzaak te \textit{verklaren}. 
 
 
 % of moleculen in water of ook in elkaar grijpende tandwieltjes in een mechanisch uurwerk. 
 
 
-In dit hoofdstuk worden de \textbf{basisbegrippen} en \textbf{basisgrootheden} van de kinematica behandeld waarmee in een volgende fase enkele concrete basisbewegingen (rechtlijnige, cirkelvormige, snelle, trage, versnellende en vertragende, enzovoort) worden beschreven.
+In dit hoofdstuk worden de \textbf{basisbegrippen} en \textbf{basisgrootheden} van de kinematica behandeld waarmee in een volgende fase enkele concrete basisbewegingen worden beschreven. (rechtlijnige, cirkelvormige, snelle, trage, versnellende en vertragende, enzovoort)
 
-Kwantitatief behandelt kinematica steeds de vectoriële grootheden \textbf{positie}, \textbf{snelheid} en \textbf{versnelling}, hun verbanden onderling en hun afhankelijk met de scalaire grootheid \textbf{tijd}.
+De kinematica behandelt steeds de vectoriële grootheden \textbf{positie}, \textbf{snelheid} en \textbf{versnelling}, hun verbanden onderling en hun afhankelijk met de scalaire grootheid \textbf{tijd}.
 
 \begin{example}
 Als een appel van een boom valt, kan je allerlei vragen stellen over deze valbeweging: 
@@ -28,7 +28,7 @@ Als een appel van een boom valt, kan je allerlei vragen stellen over deze valbew
 	\item Hoe ver valt de appel van de boom?
 	\item Hoe lang duurt het voor de appel de grond raakt? 
 	\item Hoe snel valt de appel? Is die snelheid altijd dezelfde, of valt een appel altijd maar sneller? 
-	\item Als de snelheid van de appel verandert, hoe groot is ze dan bij het begin van de val? En na 1 seconde? Wat op het moment dat de appel de grond raakt? 
+	\item Als de snelheid van de appel verandert, hoe groot is ze dan bij het begin van de val? En na één seconde? En wat op het moment dat de appel de grond raakt? 
 \end{itemize}
 
 De kinematica vraagt zich niet af \textit{waarom} een appel naar beneden valt, en bijvoorbeeld niet naar boven.
@@ -40,8 +40,8 @@ We zullen zien dat krachten eigenlijk alleen maar de \textit{veranderingen van b
 \begin{example}
 Als je een krijtje gooit naar het bord, kan je je daarover allerlei vragen stellen:
 \begin{itemize}
-\item Vliegt dat krijtje in een rechte lijn naar het bord? Of eerder in een cirkelbaan? Of misschien een ellips?
-\item Hoe snel vliegt het krijtje? Vertraagt het tijden zijn vlucht omdat het kracht verliest, of versnelt het eerder omdat het ook wat naar beneden valt? 
+\item Vliegt dat krijtje in een rechte lijn naar het bord? Of eerder in een cirkelbaan? Of misschien een ellips? Of nog een andere vorm? 
+\item Hoe snel vliegt het krijtje? Vertraagt het tijdens zijn vlucht omdat het kracht verliest, of versnelt het eerder omdat het ook wat naar beneden valt? 
 \item Als de leerkracht het laatste stukje van de baan van het krijtje nauwkeurig heeft geregistreerd, kan hij dan weten welke leerling gegooid heeft?
 % \item Als je uitglijdt en valt net bij het gooien, gaat het krijtje dan ook sneller naar beneden vallen?
 \item Vliegen lange en korte krijtjes even snel? Vliegen witte en rode krijtjes even snel? Vliegen krijtjes met een scherpe punt sneller?
@@ -51,6 +51,7 @@ Als je een krijtje gooit naar het bord, kan je je daarover allerlei vragen stell
 \end{itemize}  
 
 Sommige van deze vragen worden behandeld in de kinematica, andere in de dynamica. 
+Één vraag past natuurlijk beter binnen een cursus zingeving en ethiek, maar dat had je wel door... 
 % Enkele vragen zijn eigenlijk onzinnig, en uitzonderlijk kan een vraag worden behandeld in de strafstudie. Als een vraag grappig zou zijn, is dat toevallig en irrelevant.
 
 \end{example}
