--- a/kinematica/basis_positie.tex
+++ b/kinematica/basis_positie.tex
@@ -37,8 +37,9 @@
 \subsection*{Positie en plaatsfunctie}
 
 Met behulp van een referentiestelsel kan elke plaats van een puntmassa in de ruimte worden beschreven met een \textbf{positie- of plaatsvector}, algemeen genoteerd door $\vec{r}$.
-Afhankelijk van het aantal dimensies waarin de beweging beschreven wordt heeft deze plaatsvector één, twee of drie componenten volgens de gekozen assen, doorgaans \(\vec{x}\), \(\vec{y}\) en \(\vec{z}\) genaamd.
+Afhankelijk van het aantal dimensies waarin de beweging beschreven wordt, heeft deze plaatsvector één, twee of drie componenten volgens de gekozen assen, doorgaans \(\vec{x}\), \(\vec{y}\) en \(\vec{z}\) genaamd.
 De (scalaire) getalcomponenten van deze vectoren zijn de plaatscoördinaten \(x\),\(y\) en \(z\).
+
 
 
 
@@ -47,7 +48,7 @@ De (scalaire) getalcomponenten van deze vectoren zijn de plaatscoördinaten \(x\
 	Een plaatsvector \(\vec{r}\) kan ontbonden in de componenten volgens de assen.
 	Op die manier krijgt de puntmassa \(A\) coördinaten \(co(A) = (x,y)\).  
 	\[
-	\vec{r} = \vec{r}_x + \vec{r}_y = x\cdot\vec{e}_x + y\cdot\vec{e}_y
+	\vec{r} = \vec{x} + \vec{y} = \|\vec{x}\|\cdot\vec{e}_x + \|\vec{y}\|\cdot\vec{e}_y
 	\]
 
 \begin{image}[0.3\textwidth]
@@ -66,8 +67,8 @@ De (scalaire) getalcomponenten van deze vectoren zijn de plaatscoördinaten \(x\
 		\fill (A) circle (2pt) node[above right] {puntmassa $A$};
 	
 		\draw[->, very thick, blue] (O) -- (A) node[midway, below right] {plaatsvector $\vec{r}$};
-		\draw[->, very thick, dashed, blue] (O) -- (X) node[midway, below] {$\vec{r}_x$};
-		\draw[->, very thick, dashed, blue] (O) -- (Y) node[midway, right] {$\vec{r}_y$};
+		\draw[->, very thick, dashed, blue] (O) -- (X) node[midway, below] {$\vec{x}$};
+		\draw[->, very thick, dashed, blue] (O) -- (Y) node[midway, left] {$\vec{y}$};
 		\draw[thick, dotted, blue] (Y) -- (A) -- (X);
 	
 		\draw[->, thick, red, transform canvas={shift={(-0.05,-0.05)}}] (O) -- (0.5,0) node[midway, below] {$\vec{e}_x$};
@@ -81,30 +82,28 @@ De (scalaire) getalcomponenten van deze vectoren zijn de plaatscoördinaten \(x\
 Als een puntmassa beweegt, verandert haar plaatsvector \(\vec{r}\).  
 De beweging van een puntmassa wordt beschreven door een \textit{functie} die de \textbf{plaats} \(\vec{r}\) weergeeft in functie van de \textbf{tijd}. 
 De \textbf{plaatsfunctie} \(\vec{r}\) = \(\vec{r}\)(t) geeft voor elk tijdstip \(t\) de positie \(\vec{r}\) waar de puntmassa zich bevindt. 
-In het algemeen is een dergelijke vectorfuncties ingewikkeld om te hanteren, daarom wordt er gewerkt met de tijdsafhankelijke getalcomponenten \(x(t)\),\(y(t)\) en \(z(t)\).
-Elke coordinaatsfunctie geeft voor elk moment \(t\) de coordinaat van de puntmassa volgens een welbepaalde-as. 
-Al deze componentsfuncties samen beschrijven de volledige beweging van de puntmassa. 
+In het algemeen is een dergelijke vectorfunctie ingewikkeld om te hanteren, daarom wordt er gewerkt met de tijdsafhankelijke getalcomponenten \(x(t)\),\(y(t)\) en \(z(t)\).
+Elke coördinaatfunctie geeft voor elk moment \(t\) de coördinaat van de puntmassa volgens een welbepaalde-as. 
+Al deze componentfuncties samen beschrijven de volledige beweging van de puntmassa. 
 
 
-Bij een ééndimensionale bewegingen is er slechts één coordinaats-as nodig om de beweging te beschrijven. 
-Dat is een scalaire grootheid, namelijk de positie op de enige coördinaatas
-% \footnote{Een coördinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een ori\"entatie.} 
-en $t$ is de variabele die symbool staat voor de tijd.
-\footnote{In de fysica gebruiken we de wiskunde als `taal' om de wetmatigheden van de natuur in uit te drukken. 
+Bij ééndimensionale bewegingen is er slechts één coördinaatas nodig om de beweging te beschrijven. 
+Op die as wordt de positie als scalar afgelezen, de waarde ervan is afhankelijk van de tijd \(t\). 
+\footnote{In fysica gebruiken we wiskunde als `taal' om de wetmatigheden van de natuur uit te drukken. 
 Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis. 
 $x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent. 
-Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat deze symbool moet staan voor de tijd. 
-En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een coördinaatas hebben.}
+Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$, maar het symbool $t$. 
+En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat die de beeldwaarden zijn van de functie \(f\), \(x\) is afhankelijk van \(t\).}
 
 
 De positie op een welbepaald tijdstip $t_1$ wordt genoteerd als 
-\footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} komt de positie $x_1$ op de coördinaatas overeen volgens de formule
+\footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} 
 \begin{eqnarray*}
 x_1=x(t_1)
 \end{eqnarray*}
 
-In onderstaande figuur zie je de tocht dat een zeilship aflegde. 
-Op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ wordt weergegeven waar het ship zich bevindt. 
+In onderstaande figuur zie je de rechtlijnige tocht van een zeilship. 
+Op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ wordt weergegeven waar het schip zich bevindt. 
 
 
 \maakachtvar{0}{30}{5}{40}{15}{10}{35}{-10}
@@ -141,10 +140,11 @@ Op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ wordt weergegeven waar het sh
 \captionof{figure}{De positie van de zeilboot voor elke tijd \(t\)}
 
 
-In de natuurkunde is \textbf{tijd een dimensie}.\footnote{Einstaan gaf een beschrijving voor de zwaartekracht in de \textit{4-dimensionale ruimte-tijd}.}
+% @Bart; Vincent stelt voor 'tijd is dimensie' en voetnoot Einstein te laten vallen (draagt niet bij tot begrip van deze materie, kan verwarrend zijn, niet relevant om te vermelden)
+In de natuurkunde is \textbf{tijd een dimensie}.\footnote{Einstein gaf een beschrijving voor de zwaartekracht in de \textit{4-dimensionale ruimte-tijd}.}
 In bovenstaande figuur wordt boven elke zeilboot aangegeven op welk tijdstip de boot daar werd waargenomen. 
-Zo bevindt de boot zich op \(t_1 = \SI{5}{\second}\) op de positie \(\SI{40}{\meter}\). 
-De startpositie van de zeilboot \(x_0\) is gelijk aan \(\SI{30}{\meter}\) want voor \(t_0 = \SI{0}{\second}\) geldt \(x(0) = \SI{30}{\meter}\).
+Zo bevindt de boot zich op \(t_1 = \SI{5}{\second}\) op de positie \SI{40}{\meter}, dus \(x_1 = \SI{40}{\meter}\). 
+De startpositie van de zeilboot \(x_0\) is gelijk aan \(\SI{30}{\meter}\), want voor \(t_0 = \SI{0}{\second}\) geldt \(x(0) = \SI{30}{\meter}\).
 In plaats van de tijd boven elke zeilboot te noteren, is het ook mogelijk om de tocht op een tijd-as uit te zetten. 
 
 
@@ -186,7 +186,7 @@ In plaats van de tijd boven elke zeilboot te noteren, is het ook mogelijk om de 
 	
 	
 
-
+% @Bart vincent stelt voor deze paragraaf te laten vallen (helft van de lln gaat flippen; leuk voor enkele slimme gasten; voor meeste leerlingen is dit ontmoedigend)
 Er zit \textbf{geen} extra informatie in bovenstaande figuur! 
 We hebben enkel de tijdsdimensie uitgezet op een horizontale-as en de positie op de verticale-as. 
 Als je nu ijverig natuurkunde aan het studeren bent, kan je 'de positie' van dit blad papier onderzoeken. 
@@ -194,6 +194,8 @@ Dit blad ligt stil op je bureau en je probeert te begrijpen wat er uitgelegd wor
 Dan verandert de positie volgens de positie-as natuurlijk niet, maar het blad beweegt zich wel voort op de tijd-as. \footnote{Want terwijl je dit aan het lezen bent staat de tijd natuurlijk niet stil...\footnotemark}
 \footnotetext{Je blad beweegt zich -eerder saai- constant voort op de tijdsdimensie. Het is echter mogelijk -in de relativiteitstheorie- om ook op meer interessantere manieren op de tijd-as te bewegen.\footnotemark}
 \footnotetext{Aangezien je enkel constant op de tijd-as kan voortbewegen, en dus niet terug kan, lijkt het aangewezen om je tijd goed te benutten. Bijvoorbeeld door wat natuurkunde te leren.}
+
+
 
 De positie van de zeilboot is enkel weergegeven voor een aantal specifieke momenten \(t_0, t_1, t_2, t_3 \text{ en } t_4\). 
 De boot heeft natuurlijk ook op \textit{elk moment hiertussen} een positie \ldots
@@ -269,7 +271,8 @@ De boot heeft natuurlijk ook op \textit{elk moment hiertussen} een positie \ldot
 
 \begin{definition} 
 	De \textbf{plaatsfunctie} \(\vec{x}(t)\) geeft voor elke moment \(t\) de positievector \(\vec{x}\). \\
-	In één dimensie is \(\vec{x}\) een scalar en is de plaatsfuncie een grafiek waarop horizontaal de tijd wordt weergegeven en verticaal de positie. 
+	In één dimensie heeft \(\vec{x}\) maar één getalcomponent, namelijk \(x\) die ook tijdsafhankelijk is. 
+	\(x(t)\) geeft de plaatsfunctie die je kan uitzetten in een grafiek met verticale \(x\)-as en horizontale \(t\)-as. 
 	De positie op een welbepaald tijdstip \(t_a\) wordt genoteerd als 
 	\[
 	x_a = x(t_a)
@@ -279,7 +282,7 @@ De boot heeft natuurlijk ook op \textit{elk moment hiertussen} een positie \ldot
 	\begin{tikzpicture}
 		\begin{axis}[
 			axis lines=middle,
-			xlabel={tijd \(t\)}, ylabel={positie \(\vec{x}\)},
+			xlabel={tijd \(t\)}, ylabel={positie \(x\)},
 			grid=both,
 			width=10cm, height=6cm,
 			xmin=0, xmax=6, ymin=0, ymax=6,
@@ -372,18 +375,6 @@ Zoals aangegeven in de figuur kan ook de verplaatsingsvector \(\Delta\vec{r}\) o
 
 \end{definition}
 
-% fill moet nog verbetern --> papa 
-
-
-
-% TODO: opmerking toevoegen dat de natatie $\Delta$ *erg* slecht is, omdat ze de indices 1 en 2 niet bevat!
-
-
-
-% HIER STAAT NOG EX ZODRA AANPASSEN 
-% \pgfmathsetmacro{\deltaxba}{\bx - \ax}
-% \pgfmathsetmacro{\deltaxec}{\ex - \cx}
-
 Voor ééndimensionale bewegingen is de verplaatsing eenvoudig scalair te berekenen met: $\Delta x$ = $x_{eind}-x_{begin}$.
 De verplaatsing van de zeilboot tussen de tijdstippen $t_0$ en $t_1$ is gelijk aan \( \Delta x = x_1-x_0 = \SI{40}{\meter} - \SI{30}{\meter} = \SI{10}{\meter}\).  
 Tussen $t_2$ en $t_3$ is de verplaatsing gelijk aan \(\Delta x = x_3 - x_2=\SI{-10}{\meter} - \SI{10}{\meter} = \SI{-20}{\meter}\). 
@@ -394,7 +385,7 @@ Op de plaatsfunctie kan de verplaatsing eenvoudig afgelezen worden:
 	\begin{tikzpicture}
 		\begin{axis}[
 			axis lines=middle,
-			xlabel={tijd \(t\)}, ylabel={positie \(\vec{x}\)},
+			xlabel={tijd \(t\)}, ylabel={positie \(x\)},
 			grid=both,
 			width=10cm, height=6cm,
 			xmin=0, xmax=6, ymin=0, ymax=6,
@@ -433,11 +424,9 @@ Op de plaatsfunctie kan de verplaatsing eenvoudig afgelezen worden:
 \captionof{figure}{De verplaatsing op de plaatsfunctie}
 
 \begin{quickquestion*}{}{}
-	Bereken de verplaatsing \(\Delta x = x_4 - x_1\) van de zeilboot en duidt deze verplaatsing aan op de grafiek.  
+Bereken de verplaatsing \(\Delta x = x_4 - x_1\) van de zeilboot en duid deze verplaatsing aan op de grafiek.  
 \end{quickquestion*}
 
-\textbf{Let op}, de verplaatsing hoeft niet noodzakelijk gelijk te zijn aan de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. 
-Als je een rondje hebt gelopen op de atletiekpiste en terug aan start staat is je (netto) verplaatsing nul, maar heb je wel degelijk afstand afgelegd.
 
 Wanneer een voorwerp beweegt, doorloopt het meerdere posities. 
 De verbindingslijn van al deze gepasseerde posities, noemt men de \textbf{baan} van de beweging. 
@@ -447,13 +436,42 @@ Soms is men geïnteresseerd in een \textbf{baanvergelijking} waarin men de afhan
 Indien de functies \(x(t)\) en \(y(t)\) gekend zijn, kan soms een (expliciete) baanvergelijking bekomen worden door één voorschrift uit te werken naar \(t\) en dit vervolgens te substitueren in de andere vergelijking.
 
 
+% Hier zijn betere voorbeelden --> je wilt de baan wss ook kunnen plotten etc (bv cos en sin --> de baan is een cirkel; dan bij ECR hiernaar verwijzen...?)(miss voor volgend jaar)
+\begin{example}
+De positie van puntmassa \(A\) in het \(xy\)-vlak wordt gegeven door 
+
+\[
+\left\{
+\begin{array}{l}
+	x = t^7 \\ 
+	y = -t^2 - 3t
+\end{array}
+\right.
+\]
+
+
+Een rechtstreekse berekening levert \( x = t^7 \Rightarrow t = \sqrt[7]{x} \). 
+Dit substitueren in het voorschrift \(y(t)\) geeft de baanvergelijking \(y(x)\): 
+
+\[
+y = -t^2 - 3t \Rightarrow y(x) = -(\sqrt[7]{x})^2 - 3\sqrt[7]{x}
+\]
+
+
+\end{example}
+
+
+De verplaatsing is niet hetzelfde als de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. 
+Als je een rondje hebt gelopen op de atletiekpiste en terug aan start staat is je (netto) verplaatsing nul, maar jet hebt wel degelijk afstand afgelegd.
+De verplaatsing geeft enkel het verschil (in vogelvlucht) tussen begin- en eindpunt, terwijl de afgelegde weg \(s\) gaat over de afstand die het bewegende voorwerp over zijn baan aflegt. 
+
 \begin{image}[0.5\textwidth]
 
 \begin{tikzpicture}[scale=1.1]
 	\node[left] (A) at (0,0) {A};
 	\node[right] (B) at (6,2) {B};
   
-	\draw[thick,->] (A) -- (B) node[midway, above]{\(\Delta x\)};
+	\draw[thick,->] (A) -- (B) node[midway, above]{\(\Delta \vec{x}\)};
   
 	\draw[dashed] 
 	  (A) .. controls (2,2) and (4,3) .. (B) 
