global.sty: fix cursusnaam

--- a/SPC/global.sty
+++ b/SPC/global.sty
@@ -2,7 +2,7 @@
 \providecommand{\xmorganisatienaam}{}
 \providecommand{\xmcursusnaam}{}
 \providecommand{\xmafdelingsnaam}{}
-\renewcommand{\xmcursusnaam}{{\textsc{wiskunde.opmaat.org}}}
+\renewcommand{\xmcursusnaam}{{\textsc{Natuurkunde 6de jaar}}}
 \renewcommand{\xmorganisatienaam}{{\textsc{}}}
 \renewcommand{\xmafdelingsnaam}{{\textsc{Wiskunde Op Maat}}}
 
