Adapt remark/expandable/logo

--- a/kinematica/basis_intro.tex
+++ b/kinematica/basis_intro.tex
@@ -55,7 +55,7 @@ Sommige van deze vragen worden behandeld in de kinematica, andere in de dynamica
 
 \end{example}
 
-\begin{expandable}{youtube}{Een universiteitscollege over deze leerstof}
+\begin{expandable}{xmyoutube}{Een universiteitscollege over deze leerstof}
     \youtube{q9IWoQ199_o}
 \end{expandable}
 
