--- a/xmPreamble.tex
+++ b/xmPreamble.tex
@@ -1383,6 +1383,9 @@ Dit kan gaan over:
 
 \newcommand{\pt}[1]{\leavevmode\marginnote[\hfill\textbf{/#1}]{\hfill/#1}\addtocounter{totaantal}{#1}}
 
+% To be checked: to get \begin{expandable}{xmyoutue} work
+% COuld/should perhaps be 'xmdonothing' or so? Or expandable to be adapted
+\DeclareDocumentEnvironment{xmyoutube}{}{}{}{}
 
 \ifdefined\isXourse
 \else
