--- a/vectoren/vectoren_begrip.tex
+++ b/vectoren/vectoren_begrip.tex
@@ -33,7 +33,9 @@ Voorbeeld: een sneeuwbal heeft een temperatuur van -10°C.
 
 De plaats waarop de vector van toepassing is, noemt men het aangrijpingspunt van de vector.
 
-\begin{expandable}{youtube}{Een universiteitscollege over dit hoofdstuk}
+
+
+\begin{expandable}{xmyoutube}{Een universiteitscollege over dit hoofdstuk}
     \youtube{0na1JdPE_JY}
 \end{expandable}
 
