kinematica_basis: Fix layout

--- a/SPC/kinematica_basis.tex
+++ b/SPC/kinematica_basis.tex
@@ -1,20 +1,12 @@
-%\documentclass[12pt,numbers,noauthor,nooutcomes,wordchoicegiven]{xourse}
 \documentclass{xourse}
 
-%\addPrintStyle{.}
-
-\pdfOnly{
-    \renewcommand{\xmcursusnaam}{{\textsc{Natuurkunde}}}
-}
-
-\logo{xmPictures/nomlogo.png}
+%\logo{xmPictures/logospc.png}
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
     \xmtitle{Kinematica: Vectoren en Basisbegrippen}{}  
  
-
-%\setcounter{part}{1}
+\setcounter{part}{-1}
 
 \part{Inleiding}
 \activitychapter{../kinematica/inleiding.tex}
